--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <title>Tombola</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <script src="tombola.js" ></script>
     </head>
 </html>
 
 <body>
-    <p>hello</p>
-    <div class="tombola">
-
    
-    </div>
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+<script type = "module" src="tombola.js" ></script>
+
