--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tombola</title>
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    </head>
-</html>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ball Spawner</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-   
+    <!-- Button to spawn balls -->
+    <button id="spawnButton">Spawn Ball</button>
+    <button id="startAudioButton">Start Audio</button>
 
 </body>
-
+<!-- Include Matter.js and your custom script -->
 <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
-<script type = "module" src="tombola.js" ></script>
-
+<!--load tombola module-->
+<script type="module" src="tombola.js"></script>
+</html>
