working bounce trigger and sound trigger

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Button to spawn balls -->
     <button id="spawnButton">Spawn Ball</button>
     <button id="startAudioButton">Start Audio</button>
+    <button id="testBloop">test bloop</button>
 
 </body>
 <!-- Include Matter.js and your custom script -->
