--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <!-- Include Matter.js and your custom script -->
 <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
 <!--load tombola module-->
-<script type="module" src="tombola.js"></script>
+<script type="module" src="main.js"></script>
 </html>
