--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- Button to spawn balls -->
     <button id="spawnButton">Spawn Ball</button>
     <button id="startAudioButton">Start Audio</button>
-    <button id="testBloop">test bloop</button>
+    <p id="test">first press start audio<br>
+        then press spawn ball a few times </p>
 
 </body>
 <!-- Include Matter.js and your custom script -->
