--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <!-- Button to spawn balls -->
     <div id="controls-container">
         <sl-button variant="success" id="spawnButton" outline>Spawn Ball</sl-button>
+        <sl-button variant="success" id="spawnButton2" outline>Spawn Low Gravity Ball</sl-button>
+
         <sl-switch id="autoSpawnToggle" size="medium">Auto Spawner toggle</sl-switch>
         <sl-range id="autoSpawnTimer" label="Auto Spawn" help-text="Spawn a ball automatically every x milliseconds" min="1000" max="5000" value="2500"></sl-range>
         <!--simulation speed slider-->
-        <sl-range id="simulationSpeed" label="Simulation Speed" help-text="Adjust the speed of the simulation" min="0.05" max="1.5" value="0.60" step="0.1"></sl-range>
+        <sl-range id="simulationSpeed" label="Simulation Speed" help-text="Adjust the time scale of the simulation" min="0.03" max="1.00" value="0.50" step="0.05"></sl-range>
+        <!--bounciness slider-->
+        <sl-range id="bounciness" label="Bounciness" help-text="Adjust the bounciness of all the balls" min="0.9" max="1.5" value="1" step="0.01"></sl-range>
+        <!--gravity slider-->
+        <sl-range id="gravity" label="Gravity( needs fixing) " help-text="Adjust the gravity of all the balls" min="0.01" max="1" value="0.6" step="0.01"></sl-range>
         <!--attack slider-->
         <sl-range id="attack" label="Attack" help-text="Adjust the attack of new balls" min="0.01" max="2" value="0.2" step="0.01"></sl-range>
         <!--release slider-->
@@ -27,10 +33,12 @@
         <sl-range id="maxPitch" label="Max Pitch" help-text="Adjust the maximum pitch of the new balls" min="30" max="2000" value="600" step="100"></sl-range>
         <!--min pitch range -->
         <sl-range id="minPitch" label="Min Pitch" help-text="Adjust the minimum pitch of the new balls" min="20" max="2000" value="50" step="100"></sl-range>
-        <!--bounciness slider-->
-        <sl-range id="bounciness" label="Bounciness" help-text="Adjust the bounciness of all the balls" min="0.9" max="1.5" value="1.17" step="0.01"></sl-range>
         <!--clear balls button-->
         <sl-button variant="danger" id="clearBallsButton" outline>Clear Balls</sl-button>
+    </div>
+    <div id="debug">
+        <!--//debug button check balls are the same-->
+        <sl-button variant="warning" id="debugButton" outline>Debug Button</sl-button>
     </div>
 </div>
 </body>
